fixed export metadata for phone

--- a/UniFiler10/Views/SettingsPage.xaml
+++ b/UniFiler10/Views/SettingsPage.xaml
@@ -249,6 +249,7 @@
 
 			<ctl:LolloButton
 				Tapped="OnExport_Tapped"
+				IsEnabled="{x:Bind Path=VM.IsCanImportExport, Mode=OneWay, FallbackValue=false}"
 				Symbol="Save"
 				Uid="Export"/>
 			<!--<Button
@@ -276,7 +277,7 @@
 
 			<ctl:LolloButton
 				Tapped="OnImport_Tapped"
-				IsEnabled="{x:Bind Path=VM.IsCanImport, Mode=OneWay, FallbackValue=false}"
+				IsEnabled="{x:Bind Path=VM.IsCanImportExport, Mode=OneWay, FallbackValue=false}"
 				Visibility="{x:Bind VM.MetaBriefcase.IsElevated, Mode=OneWay, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"
 				Symbol="Import"
 				Foreground="{StaticResource FlashyForeground}"
