--- a/UniFiler10/Controlz/AnimationsControl.xaml
+++ b/UniFiler10/Controlz/AnimationsControl.xaml
@@ -1,20 +1,17 @@
 ﻿<ctl:OpenableObservableControl
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:UniFiler10.Views"
     xmlns:ctl="using:UniFiler10.Controlz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:utilz="using:Utilz"
-    xmlns:Model="using:UniFiler10.Data.Model"
-    x:Class="UniFiler10.Views.FolderView"
+    x:Class="UniFiler10.Controlz.AnimationsControl"
     x:Name="me"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400"
-	d:DataContext="{d:DesignInstance Model:Folder, CreateList=True, IsDesignTimeCreatable=True}">
+    d:DesignWidth="400">
 
-	<!--<ctl:OpenableObservableControl.Resources>
+	<ctl:OpenableObservableControl.Resources>
 		<Storyboard x:Name="UpdatingStoryboard" RepeatBehavior="Forever" >
 			<ObjectAnimationUsingKeyFrames 
                 Storyboard.TargetName="RefreshVB" 
@@ -91,148 +88,13 @@
 				<LinearDoubleKeyFrame KeyTime="0:0:0.45" Value="0"/>
 			</DoubleAnimationUsingKeyFrames>
 		</Storyboard>
-	</ctl:OpenableObservableControl.Resources>-->
+	</ctl:OpenableObservableControl.Resources>
 
 	<!--Background="{StaticResource SystemControlBackgroundBaseLowBrush}"-->
-	<Grid x:Name="LayoutRoot" 
-		Background="#FFDEEADE">
+	<Grid x:Name="LayoutRoot">
+		<!--Background="Transparent"> NO! otherwise, it can cover other stuff -->
 
-		<Popup IsOpen="{x:Bind VM.IsAudioRecorderOverlayOpen, Mode=OneWay, FallbackValue=false}">
-			<local:AudioRecorderView x:Name="AudioRecorderView"/>
-			<!--DataContext="{x:Bind Path=VM.Folder, Mode=OneWay}"/>-->
-		</Popup>
-
-		<ScrollViewer IsEnabled="{x:Bind IsOpen, Mode=OneWay}"
-			VerticalScrollBarVisibility="Auto" VerticalScrollMode="Enabled"
-			HorizontalScrollBarVisibility="Disabled" HorizontalScrollMode="Disabled">
-
-			<Grid >
-				<Grid.RowDefinitions>
-					<RowDefinition Height="Auto"/>
-					<RowDefinition Height="{StaticResource GridSize4Placeholder_Medium}"/>
-					<RowDefinition />
-					<RowDefinition Height="{StaticResource GridSize4Placeholder_Medium}"/>
-					<RowDefinition Height="Auto"/>
-					<RowDefinition Height="{StaticResource GridSize4Placeholder_Medium}"/>
-					<RowDefinition />
-				</Grid.RowDefinitions>
-
-				<!-- basic data -->
-				<ctl:UniversalWrapPanel Orientation="Horizontal">
-					<ctl:LolloTextBox
-						MinWidth="{StaticResource LandscapeItemWidth}"
-						MinHeight="{StaticResource LandscapeItemHeight}"
-						MaxLength="{StaticResource MaxFolderNameLength}"
-						Text="{Binding ElementName=me, Path=VM.Folder.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-						Style="{StaticResource LolloTextBoxStyle}">
-						<TextBox.Header>
-							<TextBlock x:Uid="Name"/>
-						</TextBox.Header>
-					</ctl:LolloTextBox>
-
-					<!--x:Name="Test"-->
-					<ctl:LolloTextBox
-						MinWidth="{StaticResource LandscapeItemWidth}"
-						MinHeight="{StaticResource LandscapeItemHeight}"
-						MaxLength="{StaticResource MaxFolderDescrLength}"
-						AcceptsReturn="True"
-						Text="{Binding ElementName=me, Path=VM.Folder.Descr0, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-						Style="{StaticResource LolloTextBoxStyle}">
-						<TextBox.Header>
-							<TextBlock x:Uid="Remarks"/>
-						</TextBox.Header>
-					</ctl:LolloTextBox>
-				</ctl:UniversalWrapPanel>
-
-				<!-- dynamic categories -->
-				<Grid Grid.Row="2" >
-					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="Auto"/>
-						<ColumnDefinition Width="{StaticResource GridSize4Placeholder_Medium}"/>
-						<ColumnDefinition/>
-					</Grid.ColumnDefinitions>
-
-					<AppBarToggleButton
-						Width="{StaticResource LandscapeItemHeight}"
-						Height="{StaticResource LandscapeItemHeight}"						
-                        VerticalAlignment="Top"
-						IsChecked="{Binding ElementName=me, Path=VM.Folder.IsEditingCategories, Mode=TwoWay}"
-						Icon="View"
-						x:Uid="EditCategories"/>
-
-					<ItemsControl Grid.Column="2"
-                        VerticalAlignment="Top"
-						Visibility="{x:Bind VM.Folder.IsEditingCategories, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
-						ItemsSource="{x:Bind VM.FolderCategorySelector, Mode=OneWay}">
-						<ItemsControl.ItemsPanel>
-							<ItemsPanelTemplate>
-								<ctl:UniversalWrapPanel Orientation="Horizontal"/>
-								<!--<ItemsWrapGrid Orientation="Horizontal"/>-->
-							</ItemsPanelTemplate>
-						</ItemsControl.ItemsPanel>
-						<ItemsControl.ItemTemplate>
-							<DataTemplate>
-								<CheckBox
-									Width="{StaticResource LandscapeItemWidth}"
-									MinHeight="{StaticResource LandscapeItemHeight}"
-									IsChecked="{Binding IsOn, Mode=TwoWay}"
-                                    Style="{StaticResource CheckBoxLolloStyle}"
-									Content="{Binding Name, Mode=OneWay}"/>
-							</DataTemplate>
-						</ItemsControl.ItemTemplate>
-					</ItemsControl>
-				</Grid>
-
-				<!-- dynamic fields -->
-				<ItemsControl Grid.Row="4"
-					ItemsSource="{x:Bind VM.Folder.DynamicFields, Mode=OneWay}">
-					<ItemsControl.ItemsPanel>
-						<ItemsPanelTemplate>
-							<!--<ItemsWrapGrid Orientation="Horizontal"/>-->
-							<ctl:UniversalWrapPanel Orientation="Horizontal"/>
-						</ItemsPanelTemplate>
-					</ItemsControl.ItemsPanel>
-					<ItemsControl.ItemTemplate>
-						<DataTemplate>
-							<Grid>
-								<ctl:LolloTextBox
-									Width="{StaticResource LandscapeItemWidth}"
-									MinHeight="{StaticResource LandscapeItemHeight}"
-									Text="{Binding FieldValue.Vaalue, Mode=OneWay}"                                    
-									LostFocus="OnVaalue_LostFocus"									
-									Header="{Binding FieldDescription.Caption, Mode=OneWay}"
-									IsReadOnly="{Binding FieldDescription.IsAnyValueAllowed, Converter={StaticResource TrueToFalseConverter}}"
-									Style="{StaticResource LolloTextBoxStyle}"
-									DisplayMemberPath="Vaalue"
-									MaxLength="{StaticResource MaxVaalueLength}"
-									ItemsSource="{Binding FieldDescription.PossibleValues}">
-									<ctl:LolloTextBox.ListItemTemplate>
-										<DataTemplate>
-											<Grid Width="{StaticResource LandscapeItemWidth}">
-												<TextBlock Text="{Binding Vaalue}"
-													MaxWidth="{StaticResource LandscapeItemWidthMinusPanelPadding}"
-													Margin="{StaticResource PanelPadding8282}"
-													TextWrapping="Wrap"/>
-											</Grid>
-										</DataTemplate>
-									</ctl:LolloTextBox.ListItemTemplate>
-								</ctl:LolloTextBox>
-							</Grid>
-						</DataTemplate>
-					</ItemsControl.ItemTemplate>
-				</ItemsControl>
-
-				<!-- Wallets -->
-				<local:WalletsView Grid.Row="6"					
-					VM="{x:Bind VM, Mode=OneWay}"/>
-				<!--DataContext="{x:Bind VM.Folder, Mode=OneWay}"/>-->
-
-				<ctl:AnimationsControl x:Name="AnimationsControl" Grid.Row="6"/>
-			</Grid>
-		</ScrollViewer>
-
-		
-		<!-- animation for refresh --><!--
+		<!-- animation for refresh -->
 		<Viewbox x:Name="RefreshVB"
                 Width="{StaticResource MiniatureHeight}"
                 Height="{StaticResource MiniatureHeight}"
@@ -253,7 +115,7 @@
 			</SymbolIcon>
 		</Viewbox>
 
-		--><!-- animation for success --><!--
+		<!-- animation for success -->
 		<Viewbox 
                 Width="{StaticResource LandscapeItemWidth}"
                 Height="{StaticResource LandscapeItemWidth}"
@@ -273,7 +135,7 @@
 			</SymbolIcon>
 		</Viewbox>
 
-		--><!-- animation for failure --><!--
+		<!-- animation for failure -->
 		<Viewbox
                 Width="{StaticResource LandscapeItemWidth}"
                 Height="{StaticResource LandscapeItemWidth}"
@@ -291,7 +153,7 @@
 					<CompositeTransform Rotation="0" ScaleX="0" ScaleY="0"/>
 				</SymbolIcon.RenderTransform>
 			</SymbolIcon>
-		</Viewbox>-->
+		</Viewbox>
 
 	</Grid>
 </ctl:OpenableObservableControl>
