--- a/UniFiler10/Controlz/LayoutTransformer.xaml
+++ b/UniFiler10/Controlz/LayoutTransformer.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:utilz="using:Utilz">
+    xmlns:ctl="using:UniFiler10.Controlz">
 
     <!-- LOLLO http://igrali.com/2012/09/17/layout-transform-in-windows-8-winrt-xaml/ -->
     
@@ -9,16 +9,16 @@
     <!-- <ResourceDictionary Source="Controlz/LayoutTransformer.xaml"/> -->
     
     <!-- declare this style without x:Key so it will always be used by default -->
-    <Style TargetType="utilz:LayoutTransformer">
+    <Style TargetType="ctl:LayoutTransformer">
         <Setter Property="Foreground" Value="#FF000000"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="utilz:LayoutTransformer">
+                <ControlTemplate TargetType="ctl:LayoutTransformer">
                     <Grid x:Name="TransformRoot" Background="{TemplateBinding Background}">
                         <ContentPresenter
-                        x:Name="Presenter"
-                        Content="{TemplateBinding Content}"
-                        ContentTemplate="{TemplateBinding ContentTemplate}"/>
+							x:Name="Presenter"
+							Content="{TemplateBinding Content}"
+							ContentTemplate="{TemplateBinding ContentTemplate}"/>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
